--- a/comparison_operators.ipynb
+++ b/comparison_operators.ipynb
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Less than or Equal to "
+    "# Less than or Equal to "
    ]
   },
   {
