--- a/for_loops.ipynb
+++ b/for_loops.ipynb
@@ -1,37 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "923a58f1-ece0-478f-ba23-292fa48db7cf",
+   "cell_type": "markdown",
+   "id": "0ad87716-165e-4fbe-8970-7d4e217d0873",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# For Loops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d110a043-25d4-42b8-ab51-fa434ca76636",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Syntax of a for loop\n",
-    "# my_iterable = [1,2,3] - this is the assignment\n",
-    "# for item_name in my_iterable: - key words for and in, then a variable name for \n",
-    "# a place holder for every item in your iterable object, in this case it represents\n",
-    "# the numbers in that list. in-keyword, is the variable name I chose.\n",
-    "#   print(item_name)\n",
+    "# For Loops\n",
     "\n",
-    "#>> 1\n",
-    "#>> 2\n",
-    "#>> 3"
+    "## Many objects in Python are \"iterable\", meaning we can iterate over every element in the object.\n",
+    "## Such as every element in a list or every character in a string.\n",
+    "## We can use for loops to execute a block of code for every iteration.\n",
+    "## The term *iterable* means you can \"iterate\" over the object.\n",
+    "## For example you can iterate over every character in a string, iterate over every item in a list, iterate over every key in a dictionary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb1c944c-743a-481e-a333-cadceec79872",
+   "metadata": {},
+   "source": [
+    "### Syntax of a for loop\n",
+    "### my_iterable = [1,2,3] - *this is the assignment of a list*\n",
+    "### for item_name in my_iterable: - key words for and in, then a variable name for \n",
+    "### a place holder for every item in your iterable object, in this case it represents\n",
+    "### the numbers in that list. in-keyword, is the variable name I chose.\n",
+    "###   print(item_name)\n",
+    "\n",
+    "### >> 1\n",
+    "### >> 2\n",
+    "### >> 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5e9ac9d1-2580-4bb3-8377-9c060b7889e0",
    "metadata": {},
    "outputs": [],
@@ -69,6 +71,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "78f09140-250a-49f6-b3fa-356a6152ef5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# showing that the variable name to represent what is in the list can be whatever you want it to be\n",
+    "for apple in mylist:\n",
+    "    print(apple)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "1fd15ad3-3392-468c-adcf-b94ae0d80975",
    "metadata": {},
@@ -91,6 +122,7 @@
     }
    ],
    "source": [
+    "# showing that we can print out what we put in print based on the number of items in our list. \n",
     "for jelly in mylist:\n",
     "    print('hello')"
    ]
@@ -181,6 +213,14 @@
     "    \n",
     "    print(list_sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66e4b302-78b8-46e9-9de4-22927a13368d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -305,6 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# How we can unpack a tuple\n",
     "mylist = [(1,2),(3,4),(5,6),(7,8)]"
    ]
   },
@@ -425,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "7618e6a4-dfcd-4274-aa54-997558641239",
    "metadata": {},
    "outputs": [],
@@ -435,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "1a09e574-1d50-4971-97ad-9c7125f61b2b",
    "metadata": {},
    "outputs": [
@@ -456,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "0fc59896-6ba6-4428-9325-1d07e1c3cef5",
    "metadata": {},
    "outputs": [
@@ -477,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "f24eb24f-4f60-40c9-8f6e-1c305e28cba1",
    "metadata": {},
    "outputs": [
@@ -492,7 +533,7 @@
     }
    ],
    "source": [
-    "# iterate through a dictionary\n",
+    "# iterate through a dictionary, in this example only printing the keys\n",
     "d = {'k1':1, 'k2':2, 'k3':3}\n",
     "\n",
     "for item in d:\n",
@@ -501,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "2bda0b41-cb24-451e-9e43-e88c673abb12",
    "metadata": {},
    "outputs": [
@@ -516,6 +557,7 @@
     }
    ],
    "source": [
+    "# in this example printing out the items by calling it in the for loop\n",
     "d = {'k1':1, 'k2':2, 'k3':3}\n",
     "\n",
     "for item in d.items():\n",
@@ -524,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "0f89b23b-9b48-4314-be62-cbe67d894cd0",
    "metadata": {},
    "outputs": [
@@ -539,14 +581,37 @@
     }
    ],
    "source": [
+    "# in this example using tuple unpacking, able to get just the value in the dictionary\n",
     "for key,value in d.items():\n",
     "    print(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2ecd9daa-2d80-4192-b27a-2b9f6983660f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# an example of how to just print out just the values\n",
+    "for value in d.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20848ebd-74cf-433f-9844-a8bcc5d0f181",
    "metadata": {},
    "outputs": [],
    "source": []
