--- a/if_elif_and_else.ipynb
+++ b/if_elif_and_else.ipynb
@@ -1,22 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8f4726d7-166c-408a-ab4d-f5ffd463d8cc",
+   "cell_type": "markdown",
+   "id": "69ca5db4-67d5-46f2-abbc-5da258e039ce",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# control flow\n",
+    "# Control Flow\n",
     "\n",
-    "# Keywords: if, elif, else\n",
+    "## We often only want certain code to execute when a particluar condition has been met.\n",
+    "## For example, if my dog is hungry (some condition), then I will feed the dog (some action).\n",
     "\n",
-    "#if some_condition:\n",
-    "    # execute some code\n",
-    "#elif some_other_condition:\n",
-    "    #do something different\n",
-    "#else:\n",
-    "    # do something else"
+    "## Keywords: if, elif, else\n",
+    "\n",
+    "## Control Flow syntax makes use of colons and indentation (whitespace).\n",
+    "## This indentation system is crucial to Python and is what sets it apart from other programming languages.\n",
+    "\n",
+    "## Syntax of an *if* statement\n",
+    "### if some_condition:\n",
+    "   execute some code\n",
+    "## elif some_other_condition:\n",
+    "##    do something different\n",
+    "## else:\n",
+    "##    do something else"
    ]
   },
   {
