--- a/useful_operators.ipynb
+++ b/useful_operators.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "# range\n",
+    "# range - use shft + tab to see the parameters it takes\n",
     "for num in range(0,11,2):\n",
     "    print(num)"
    ]
@@ -137,7 +137,7 @@
     }
    ],
    "source": [
-    "# enumerate\n",
+    "# enumerate - get back tuples\n",
     "word = 'abcde'\n",
     "\n",
     "for item in enumerate(word):\n",
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "# enumerate\n",
+    "# enumerate - unpacking tuples\n",
     "word = 'abcde'\n",
     "\n",
     "for index, letter in enumerate(word):\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "8b051b75-9b4a-4577-a747-450c5940615b",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "cfd5f28f-4696-410c-b24e-c7ca5f4944bc",
    "metadata": {},
    "outputs": [
@@ -218,14 +218,14 @@
     }
    ],
    "source": [
-    "# zip operator- will only zip the list with the shortest\n",
+    "# zip operator- will only zip the list with the shortest list\n",
     "for item in zip(mylist1, mylist2):\n",
     "    print(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "01032f05-3a64-4d10-bcba-1f9f97649bf5",
    "metadata": {},
    "outputs": [
@@ -242,6 +242,28 @@
    "source": [
     "for item in zip(mylist1,mylist2,mylist3):\n",
     "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "94ad7382-cb1b-4616-984c-c64dc2d91ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# upacking the tuple list\n",
+    "for a,b,c in zip(mylist1,mylist2,mylist3):\n",
+    "    print(a)"
    ]
   },
   {
@@ -455,6 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the library - shuffle\n",
     "from random import shuffle"
    ]
   },
@@ -506,6 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the library - randint\n",
     "from random import randint"
    ]
   },
@@ -621,8 +645,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8023e86b-0290-49a6-86e0-1431bfe27cc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Favorite Number:  42\n"
+     ]
+    }
+   ],
+   "source": [
+    "detail = input('Favorite Number: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ac0757b-74a8-4504-b70a-b04e1c9edbf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'42'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "95f88c2f-819d-4cf1-b747-633e3722c6da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(detail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "654fa8a0-175d-41c4-91ee-898cc3a46d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(detail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bc12880a-2eac-4fee-af89-a7760a7e2cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(detail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d28d554f-8072-45bf-8fce-add376786b3b",
    "metadata": {},
    "outputs": [],
    "source": []
