--- a/while_loops.ipynb
+++ b/while_loops.ipynb
@@ -10,11 +10,11 @@
     "For example, while my pool is not full, keep filling my pool with water.\n",
     "Or while my dogs are still hungry, keep feeding my dogs.\n",
     "\n",
-    "Syntax of a while loop\n",
-    "     while some_boolean_condition:\n",
-    "       do something\n",
-    "     else:\n",
-    "       do someting different"
+    "## Syntax of a while loop\n",
+    "###     while some_boolean_condition:\n",
+    "###       do something\n",
+    "###     else:\n",
+    "###       do someting different"
    ]
   },
   {
@@ -101,6 +101,7 @@
     }
    ],
    "source": [
+    "# Syntax error because Python is expecting something after the :\n",
     "x = [1,2,3]\n",
     "\n",
     "for item in x:\n",
