--- a/methods_functions.ipynb
+++ b/methods_functions.ipynb
@@ -1323,8 +1323,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "25fc162e-7a38-400e-84db-d602a537ebf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Pick a number: 0, 1, or 2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "myindex = player_guess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "e5352a9d-9d85-4760-9cee-926c080c6d1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "fa5586bc-5af5-4cf6-aeea-953f364b8301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_guess(mylist,guess):\n",
+    "    if mylist[guess] == 'O':\n",
+    "        print(\"Correct!\")\n",
+    "    else:\n",
+    "        print(\"Wrong guess!\")\n",
+    "        print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "8bf9dec9-3682-4793-89cd-beb1b00da028",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Pick a number: 0, 1, or 2 8\n",
+      "Pick a number: 0, 1, or 2 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong guess!\n",
+      "[' ', ' ', 'O']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SETUP INITAL LIST\n",
+    "mylist = [' ', 'O', ' ']\n",
+    "# SHUFFLE LIST\n",
+    "mixedup_list = shuffle_list(mylist)\n",
+    "# USER GUESS LOCATION\n",
+    "guess = player_guess()\n",
+    "# CHECK GUESS\n",
+    "check_guess(mixedup_list,guess)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "108a88c9-9814-4074-ad1f-39d78449fb0f",
+   "metadata": {},
+   "source": [
+    "# Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "984d0eb1-1c0e-4fa5-b9c2-7b585a562b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "1867dd8e-d9ec-4f27-bcd0-77fd7abca0f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "0d0a837f-a644-4333-9b32-42eb301a2694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(name):\n",
+    "    print('Hello {}'.format(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "0dbf4587-8bbe-4c62-972d-5aaf5f30529c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Jose\n"
+     ]
+    }
+   ],
+   "source": [
+    "myfunc('Jose')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "194a8957-3693-473c-8a35-7a841e30047f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(x):\n",
+    "    if x == True:\n",
+    "        return 'Hello'\n",
+    "    elif x == False:\n",
+    "        return 'Goodbye'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "204ce16f-286d-427d-ab20-23cedfbca506",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Goodbye'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "02ad645f-c1f8-4807-b9d8-4cd15f62a5bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(x,y,z):\n",
+    "    if z == True:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "b6f4b6ef-8a60-4be8-94e5-d83255fc7766",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Goodbye'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc('Hello', 'Goodbye', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "98dac6a7-3f42-45a9-b273-e7e1d720fd17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(a,b):\n",
+    "    return a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "908bf492-d519-4e34-96ac-f7a7388b3e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(5,12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "e7880717-d798-40f6-8f20-e14d40c31fbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_even(n):\n",
+    "    if n % 3 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "35cce6a7-ec32-464e-9d14-8ba598e40473",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_even(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "8aee2966-3f83-4a6b-a562-176eb438e221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_greater(c,d):\n",
+    "    if c > d:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "ec2b4330-4cef-41bc-a834-5ca03541e05e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_greater(3,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "53dd71a3-d540-4c5e-94dc-5d2c7e02a907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_greater(20,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8ac0f0c-0612-4f78-bbd0-f4890c7f14ec",
    "metadata": {},
    "outputs": [],
    "source": []
